--- a/inicio.html
+++ b/inicio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio</title>
+    <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="css/iniciosesion.css">
     <link rel="stylesheet" href="css/inicio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -29,17 +29,21 @@
                 <input type="password" id="password" name="password" placeholder="Contraseña" required style="padding-left:32px;">
                 <span class="campo-ayuda">Obligatorio</span>
             </div>
-            <button type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i> Ingresar</button>
-            <div class="mensaje-login" id="mensajeLogin"></div>
-            <p style="text-align:center; margin-top:10px;"><a href="recuperar.html" class="recuperar-link">¿Olvidaste tu contraseña?</a></p>
-            <p style="text-align:center; margin-top:6px;"><a href="registro.html" class="registrarse-link"><i class="fa-solid fa-user-plus"></i> Registrarse</a></p>
+            <button type="submit" class="btn btn-primary w-100 mt-3"><i class="fa-solid fa-arrow-right-to-bracket"></i> Ingresar</button>
+            <div class="mensaje-login text-danger text-center mt-2" id="mensajeLogin"></div>
+            <div class="text-center mt-3">
+                <a href="recuperar.html" class="recuperar-link">&#191;Olvidaste tu contraseña?</a>
+                <br>
+                <a href="registro.html" class="registrarse-link"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
+            </div>
         </form>
     </div>
 </div>
+
 <script>
-// Feedback visual y mensajes de error personalizados para login
 const loginForm = document.getElementById('loginForm');
 const mensajeLogin = document.getElementById('mensajeLogin');
+
 function mostrarErrorLogin(campo, mensaje) {
     const el = document.getElementById(campo);
     if (el) {
@@ -48,10 +52,12 @@ function mostrarErrorLogin(campo, mensaje) {
     }
     mensajeLogin.textContent = mensaje;
 }
+
 function limpiarErroresLogin() {
     document.querySelectorAll('.error-campo').forEach(e => e.classList.remove('error-campo'));
     mensajeLogin.textContent = '';
 }
+
 window.addEventListener('DOMContentLoaded', function() {
     const params = new URLSearchParams(window.location.search);
     if (params.get('error') === 'login') {
@@ -85,11 +91,13 @@ function mostrarModalError(mensaje) {
     `;
     document.body.appendChild(modal);
 }
+
 loginForm.onsubmit = function(e) {
     limpiarErroresLogin();
     let valid = true;
     const usuario = document.getElementById('username');
     const pass = document.getElementById('password');
+
     if (!usuario.value.trim()) {
         usuario.classList.add('error-campo');
         valid = false;
@@ -104,8 +112,8 @@ loginForm.onsubmit = function(e) {
     }
 };
 </script>
+
 <script src="validaciones.js"></script>
-<!-- JS de Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
