--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="css/iniciosesion.css">
-    <link rel="stylesheet" href="css/inicio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -40,80 +39,7 @@
     </div>
 </div>
 
-<script>
-const loginForm = document.getElementById('loginForm');
-const mensajeLogin = document.getElementById('mensajeLogin');
-
-function mostrarErrorLogin(campo, mensaje) {
-    const el = document.getElementById(campo);
-    if (el) {
-        el.classList.add('error-campo');
-        el.focus();
-    }
-    mensajeLogin.textContent = mensaje;
-}
-
-function limpiarErroresLogin() {
-    document.querySelectorAll('.error-campo').forEach(e => e.classList.remove('error-campo'));
-    mensajeLogin.textContent = '';
-}
-
-window.addEventListener('DOMContentLoaded', function() {
-    const params = new URLSearchParams(window.location.search);
-    if (params.get('error') === 'login') {
-        mostrarErrorLogin('username', 'Usuario o contraseña incorrectos.');
-        mostrarErrorLogin('password', '');
-        mostrarModalError('Usuario o contraseña incorrectos.');
-    } else if (params.get('error')) {
-        mostrarModalError(params.get('error'));
-    }
-});
-
-function mostrarModalError(mensaje) {
-    let modal = document.createElement('div');
-    modal.id = 'modalErrorLogin';
-    modal.style.position = 'fixed';
-    modal.style.top = '0';
-    modal.style.left = '0';
-    modal.style.width = '100vw';
-    modal.style.height = '100vh';
-    modal.style.background = 'rgba(0,0,0,0.5)';
-    modal.style.display = 'flex';
-    modal.style.alignItems = 'center';
-    modal.style.justifyContent = 'center';
-    modal.style.zIndex = '9999';
-    modal.innerHTML = `
-        <div style="background:#fff;padding:30px 40px;border-radius:10px;box-shadow:0 2px 10px #0003;text-align:center;max-width:90vw;">
-            <h3 style="color:#c00;margin-bottom:10px;">Error de inicio de sesión</h3>
-            <p style="margin-bottom:20px;">${mensaje}</p>
-            <button onclick="document.getElementById('modalErrorLogin').remove()" style="padding:8px 20px;background:#c00;color:#fff;border:none;border-radius:5px;cursor:pointer;">Cerrar</button>
-        </div>
-    `;
-    document.body.appendChild(modal);
-}
-
-loginForm.onsubmit = function(e) {
-    limpiarErroresLogin();
-    let valid = true;
-    const usuario = document.getElementById('username');
-    const pass = document.getElementById('password');
-
-    if (!usuario.value.trim()) {
-        usuario.classList.add('error-campo');
-        valid = false;
-    }
-    if (!pass.value.trim()) {
-        pass.classList.add('error-campo');
-        valid = false;
-    }
-    if (!valid) {
-        mensajeLogin.textContent = 'Por favor completa ambos campos.';
-        e.preventDefault();
-    }
-};
-</script>
-
-<script src="validaciones.js"></script>
+<script defer src="validaciones.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
